added styles for buttons

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -29,3 +29,10 @@ body {
   font-family: 'Josefin Sans';
   font-size: 1.125rem;
 }
+
+button {
+  font-family: "Josefin Sans";
+  font-size: 1.125rem;
+  color: #46485e;
+  cursor: pointer;
+}
