--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,13 +2,13 @@
   font-family: 'Josefin Sans';
   font-style: normal;
   font-weight: $fontWeight;
-  src: url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.eot'); /* IE9 Compat Modes */
+  src: url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.woff') format('woff'), /* Modern Browsers */
-       url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./src/fonts/josefin-sans-v25-latin-#{$fontCap}.svg#JosefinSans') format('svg'); /* Legacy iOS */
+       url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.woff2') format('woff2'), /* Super Modern Browsers */
+       url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.woff') format('woff'), /* Modern Browsers */
+       url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('@/fonts/josefin-sans-v25-latin-#{$fontCap}.svg#JosefinSans') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
